add MsgUpdateParams for crontask, added logic to remove old done tasks
