# x/crontask/types/codec.go
@@ -19,6 +19,7 @@ func RegisterInterfaces(registry cdctypes.InterfaceRegistry) {
 	registry.RegisterImplementations((*sdk.Msg)(nil),
 		&MsgCreateTask{},
 		&MsgDeleteTask{},
+		&MsgUpdateParams{},
 	)
 
 	// Register UnpackInterfacesMessage implementations
