# x/crontask/types/crontask.pb.go
@@ -201,6 +201,8 @@ type Params struct {
 	ExpiryLimit int64 `protobuf:"varint,2,opt,name=expiry_limit,json=expiryLimit,proto3" json:"expiry_limit,omitempty"`
 	// Maximum allowed scheduled time in seconds from task creation (24 hours)
 	MaxScheduledTime int64 `protobuf:"varint,3,opt,name=max_scheduled_time,json=maxScheduledTime,proto3" json:"max_scheduled_time,omitempty"`
+	// Retention period for completed/failed/expired tasks (seconds)
+	CleanUpTime int64 `protobuf:"varint,4,opt,name=clean_up_time,json=cleanUpTime,proto3" json:"clean_up_time,omitempty"`
 }
 
 func (m *Params) Reset()         { *m = Params{} }
@@ -257,6 +259,13 @@ func (m *Params) GetMaxScheduledTime() int64 {
 	return 0
 }
 
+func (m *Params) GetCleanUpTime() int64 {
+	if m != nil {
+		return m.CleanUpTime
+	}
+	return 0
+}
+
 func init() {
 	proto.RegisterType((*Task)(nil), "dysonprotocol.crontask.v1.Task")
 	proto.RegisterType((*Params)(nil), "dysonprotocol.crontask.v1.Params")
@@ -267,46 +276,47 @@ func init() {
 }
 
 var fileDescriptor_c2a40f3e0e41e1b8 = []byte{
-	// 612 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x54, 0xcd, 0x6e, 0xd3, 0x4c,
-	0x14, 0x8d, 0xdb, 0x34, 0x6d, 0x26, 0xe9, 0xdf, 0x7c, 0xd5, 0xd7, 0x69, 0x91, 0x4c, 0x28, 0x08,
-	0x99, 0x0a, 0x6c, 0xa5, 0x88, 0x1d, 0x9b, 0xb6, 0x52, 0x11, 0xa8, 0x8b, 0x2a, 0xed, 0x8a, 0x8d,
-	0x35, 0xb1, 0xa7, 0x83, 0x55, 0x8f, 0x27, 0x9a, 0xeb, 0x54, 0xc9, 0xb2, 0x6f, 0xc0, 0x63, 0xb0,
-	0x64, 0xc1, 0x43, 0x74, 0x59, 0xb1, 0x62, 0x85, 0x50, 0xb3, 0xe0, 0x35, 0xd0, 0xfc, 0xc4, 0x4d,
-	0x41, 0x42, 0x62, 0x63, 0xcd, 0x3d, 0xe7, 0xdc, 0xeb, 0x3b, 0xf7, 0x5c, 0x1b, 0x05, 0xe9, 0x18,
-	0x64, 0x31, 0x50, 0xb2, 0x94, 0x89, 0xcc, 0xa3, 0x44, 0xc9, 0xa2, 0xa4, 0x70, 0x11, 0x5d, 0x76,
-	0xab, 0x73, 0x68, 0x58, 0xbc, 0x75, 0x4f, 0x19, 0x56, 0xec, 0x65, 0x77, 0x7b, 0x83, 0x4b, 0x2e,
-	0x0d, 0x13, 0xe9, 0x93, 0x4d, 0xd8, 0xde, 0x4a, 0x24, 0x08, 0x09, 0xb1, 0x25, 0x6c, 0xe0, 0x28,
-	0xdf, 0x46, 0x51, 0x9f, 0x02, 0x8b, 0x2e, 0xbb, 0x7d, 0x56, 0xd2, 0x6e, 0x94, 0xc8, 0xac, 0xf8,
-	0x83, 0x2f, 0x2e, 0x2a, 0x5e, 0x07, 0x8e, 0x5f, 0xa7, 0x22, 0x2b, 0x64, 0x64, 0x9e, 0x0e, 0xda,
-	0x74, 0x29, 0x02, 0xb8, 0x6e, 0x5e, 0x00, 0x9f, 0xb6, 0xc1, 0xa5, 0xe4, 0x39, 0x8b, 0x4c, 0xd4,
-	0x1f, 0x9e, 0x47, 0xb4, 0x18, 0x5b, 0x6a, 0xe7, 0x6a, 0x01, 0xd5, 0xcf, 0x28, 0x5c, 0xe0, 0x4d,
-	0xb4, 0xa8, 0xef, 0x12, 0x67, 0x29, 0xf1, 0x3a, 0x5e, 0x50, 0xef, 0x35, 0x74, 0xf8, 0x36, 0xc5,
-	0x7b, 0x68, 0x31, 0x51, 0x8c, 0x96, 0x52, 0x91, 0xb9, 0x8e, 0x17, 0x34, 0x0f, 0xc8, 0xd7, 0x2f,
-	0x2f, 0x36, 0xdc, 0x5d, 0xf6, 0xd3, 0x54, 0x31, 0x80, 0xd3, 0x52, 0x65, 0x05, 0xef, 0x4d, 0x85,
-	0x38, 0x42, 0xff, 0x41, 0xf2, 0x81, 0xa5, 0xc3, 0x9c, 0xa5, 0x71, 0x99, 0x09, 0x06, 0x25, 0x15,
-	0x03, 0x32, 0xdf, 0xf1, 0x82, 0xf9, 0x1e, 0xae, 0xa8, 0xb3, 0x29, 0x83, 0x9f, 0xa1, 0x35, 0x36,
-	0x1a, 0x64, 0x6a, 0x3c, 0xa3, 0xae, 0x1b, 0xf5, 0xaa, 0xc5, 0xef, 0xa4, 0x4f, 0xd0, 0x8a, 0x69,
-	0x94, 0x53, 0x88, 0xf3, 0x4c, 0x64, 0x25, 0x59, 0x30, 0xfd, 0xb6, 0x35, 0xfa, 0x86, 0xc2, 0xb1,
-	0xc6, 0xf0, 0xbb, 0x19, 0xd5, 0x40, 0x65, 0x09, 0x23, 0x8d, 0x8e, 0x17, 0xb4, 0xf6, 0xb6, 0x42,
-	0xd7, 0xb9, 0x9e, 0x7b, 0xe8, 0xe6, 0x1a, 0x1e, 0xca, 0xac, 0x38, 0x68, 0x5e, 0x7f, 0x7f, 0x58,
-	0xfb, 0xf4, 0xf3, 0xf3, 0xae, 0x57, 0xd5, 0x3a, 0xd1, 0x99, 0xf8, 0x08, 0xb5, 0xab, 0x5a, 0xe7,
-	0x8c, 0x91, 0xc5, 0x7f, 0xa8, 0x84, 0x5c, 0xa5, 0x23, 0xc6, 0x70, 0x80, 0xea, 0x02, 0x38, 0x90,
-	0xa5, 0xce, 0x7c, 0xd0, 0xda, 0xdb, 0x08, 0xad, 0x2b, 0xe1, 0xd4, 0x95, 0x70, 0xbf, 0x18, 0xf7,
-	0x8c, 0x02, 0xbf, 0x42, 0x2d, 0x01, 0x3c, 0x56, 0x0c, 0x86, 0x79, 0x09, 0xa4, 0xf9, 0x97, 0x04,
-	0x24, 0x80, 0xf7, 0xac, 0x0e, 0xff, 0x8f, 0x1a, 0x50, 0xd2, 0x72, 0x08, 0x04, 0x69, 0xa7, 0x7a,
-	0x2e, 0xc2, 0x8f, 0xd1, 0xb2, 0x71, 0x26, 0x93, 0x85, 0x99, 0x2f, 0x69, 0x99, 0xd1, 0xb6, 0xa7,
-	0xa0, 0x1e, 0x2e, 0x7e, 0x80, 0x9a, 0x4c, 0x29, 0xa9, 0xe2, 0x5c, 0x72, 0xd2, 0x36, 0xf9, 0x4b,
-	0x06, 0x38, 0x96, 0x1c, 0xef, 0xa2, 0xf5, 0x6a, 0x04, 0x89, 0x2c, 0x60, 0x28, 0x58, 0x4a, 0x96,
-	0xcd, 0xdc, 0x57, 0xdd, 0x0d, 0x0f, 0x1d, 0xac, 0xcd, 0x67, 0x23, 0x96, 0x0c, 0xab, 0xd7, 0x59,
-	0x3b, 0x57, 0xac, 0xf9, 0x15, 0x55, 0x39, 0xba, 0x73, 0xe5, 0xa1, 0xc6, 0x09, 0x55, 0x54, 0x00,
-	0x7e, 0x8a, 0x56, 0xfb, 0xb9, 0x4c, 0x66, 0xdd, 0xb5, 0xdb, 0xb8, 0x6c, 0xe0, 0xca, 0xde, 0x47,
-	0xa8, 0xed, 0xf6, 0xc5, 0x8a, 0xe6, 0x4c, 0xf1, 0x96, 0xc5, 0xac, 0xe4, 0x39, 0xc2, 0x82, 0x8e,
-	0xe2, 0xfb, 0x7b, 0xe8, 0x56, 0x70, 0x4d, 0xd0, 0xd1, 0xe9, 0xec, 0x16, 0x1e, 0xbc, 0xbe, 0xbe,
-	0xf5, 0xbd, 0x9b, 0x5b, 0xdf, 0xfb, 0x71, 0xeb, 0x7b, 0x1f, 0x27, 0x7e, 0xed, 0x66, 0xe2, 0xd7,
-	0xbe, 0x4d, 0xfc, 0xda, 0xfb, 0x9d, 0xdf, 0x3e, 0x7a, 0x29, 0xa2, 0xd1, 0xdd, 0x4f, 0xa2, 0x1c,
-	0x0f, 0x18, 0xf4, 0x1b, 0x86, 0x7e, 0xf9, 0x2b, 0x00, 0x00, 0xff, 0xff, 0x75, 0xc1, 0x15, 0x92,
-	0x4b, 0x04, 0x00, 0x00,
+	// 631 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x54, 0xcd, 0x6e, 0xd3, 0x40,
+	0x10, 0x8e, 0xdb, 0x34, 0x6d, 0x36, 0x49, 0x7f, 0x96, 0x8a, 0x6e, 0x8b, 0x64, 0x42, 0x40, 0xc8,
+	0x54, 0x60, 0x2b, 0x45, 0xdc, 0xb8, 0xb4, 0x95, 0x8a, 0x40, 0x3d, 0x54, 0x6e, 0xb9, 0x70, 0xb1,
+	0x36, 0xf6, 0x76, 0xb1, 0xea, 0xf5, 0x5a, 0xbb, 0x76, 0x95, 0x1c, 0x79, 0x03, 0x5e, 0x02, 0x89,
+	0x23, 0x07, 0x1e, 0xa2, 0xc7, 0x8a, 0x13, 0x27, 0x84, 0xda, 0x03, 0xaf, 0x81, 0xf6, 0x27, 0x6e,
+	0x0a, 0x12, 0x12, 0x17, 0x6b, 0xe7, 0xfb, 0xbe, 0x19, 0xcf, 0xce, 0x37, 0x5a, 0xe0, 0x25, 0x13,
+	0xc9, 0xf3, 0x42, 0xf0, 0x92, 0xc7, 0x3c, 0x0b, 0x62, 0xc1, 0xf3, 0x12, 0xcb, 0xb3, 0xe0, 0x7c,
+	0x58, 0x9f, 0x7d, 0xcd, 0xc2, 0xcd, 0x5b, 0x4a, 0xbf, 0x66, 0xcf, 0x87, 0x5b, 0xeb, 0x94, 0x53,
+	0xae, 0x99, 0x40, 0x9d, 0x4c, 0xc2, 0xd6, 0x66, 0xcc, 0x25, 0xe3, 0x32, 0x32, 0x84, 0x09, 0x2c,
+	0xe5, 0x9a, 0x28, 0x18, 0x61, 0x49, 0x82, 0xf3, 0xe1, 0x88, 0x94, 0x78, 0x18, 0xc4, 0x3c, 0xcd,
+	0xff, 0xe2, 0xf3, 0xb3, 0x9a, 0x57, 0x81, 0xe5, 0xd7, 0x30, 0x4b, 0x73, 0x1e, 0xe8, 0xaf, 0x85,
+	0x36, 0x6c, 0x0a, 0x93, 0x54, 0x35, 0xcf, 0x24, 0x9d, 0xb6, 0x41, 0x39, 0xa7, 0x19, 0x09, 0x74,
+	0x34, 0xaa, 0x4e, 0x03, 0x9c, 0x4f, 0x0c, 0x35, 0xf8, 0xb0, 0x00, 0x9a, 0x27, 0x58, 0x9e, 0xc1,
+	0x0d, 0xb0, 0xa8, 0xee, 0x12, 0xa5, 0x09, 0x72, 0xfa, 0x8e, 0xd7, 0x0c, 0x5b, 0x2a, 0x7c, 0x9d,
+	0xc0, 0x1d, 0xb0, 0x18, 0x0b, 0x82, 0x4b, 0x2e, 0xd0, 0x5c, 0xdf, 0xf1, 0xda, 0x7b, 0xe8, 0xdb,
+	0xd7, 0x67, 0xeb, 0xf6, 0x2e, 0xbb, 0x49, 0x22, 0x88, 0x94, 0xc7, 0xa5, 0x48, 0x73, 0x1a, 0x4e,
+	0x85, 0x30, 0x00, 0x77, 0x64, 0xfc, 0x9e, 0x24, 0x55, 0x46, 0x92, 0xa8, 0x4c, 0x19, 0x91, 0x25,
+	0x66, 0x05, 0x9a, 0xef, 0x3b, 0xde, 0x7c, 0x08, 0x6b, 0xea, 0x64, 0xca, 0xc0, 0x27, 0x60, 0x95,
+	0x8c, 0x8b, 0x54, 0x4c, 0x66, 0xd4, 0x4d, 0xad, 0x5e, 0x31, 0xf8, 0x8d, 0xf4, 0x11, 0x58, 0xd6,
+	0x8d, 0x52, 0x2c, 0xa3, 0x2c, 0x65, 0x69, 0x89, 0x16, 0x74, 0xbf, 0x5d, 0x85, 0xbe, 0xc2, 0xf2,
+	0x50, 0x61, 0xf0, 0xcd, 0x8c, 0xaa, 0x10, 0x69, 0x4c, 0x50, 0xab, 0xef, 0x78, 0x9d, 0x9d, 0x4d,
+	0xdf, 0x76, 0xae, 0xe6, 0xee, 0xdb, 0xb9, 0xfa, 0xfb, 0x3c, 0xcd, 0xf7, 0xda, 0x17, 0x3f, 0xee,
+	0x37, 0x3e, 0xff, 0xfa, 0xb2, 0xed, 0xd4, 0xb5, 0x8e, 0x54, 0x26, 0x3c, 0x00, 0xdd, 0xba, 0xd6,
+	0x29, 0x21, 0x68, 0xf1, 0x3f, 0x2a, 0x01, 0x5b, 0xe9, 0x80, 0x10, 0xe8, 0x81, 0x26, 0x93, 0x54,
+	0xa2, 0xa5, 0xfe, 0xbc, 0xd7, 0xd9, 0x59, 0xf7, 0x8d, 0x2b, 0xfe, 0xd4, 0x15, 0x7f, 0x37, 0x9f,
+	0x84, 0x5a, 0x01, 0x5f, 0x80, 0x0e, 0x93, 0x34, 0x12, 0x44, 0x56, 0x59, 0x29, 0x51, 0xfb, 0x1f,
+	0x09, 0x80, 0x49, 0x1a, 0x1a, 0x1d, 0xbc, 0x0b, 0x5a, 0xb2, 0xc4, 0x65, 0x25, 0x11, 0x50, 0x4e,
+	0x85, 0x36, 0x82, 0x0f, 0x41, 0x4f, 0x3b, 0x93, 0xf2, 0x5c, 0xcf, 0x17, 0x75, 0xf4, 0x68, 0xbb,
+	0x53, 0x50, 0x0d, 0x17, 0xde, 0x03, 0x6d, 0x22, 0x04, 0x17, 0x51, 0xc6, 0x29, 0xea, 0xea, 0xfc,
+	0x25, 0x0d, 0x1c, 0x72, 0x0a, 0xb7, 0xc1, 0x5a, 0x3d, 0x82, 0x98, 0xe7, 0xb2, 0x62, 0x24, 0x41,
+	0x3d, 0x3d, 0xf7, 0x15, 0x7b, 0xc3, 0x7d, 0x0b, 0x2b, 0xf3, 0xc9, 0x98, 0xc4, 0x55, 0xfd, 0x3b,
+	0x63, 0xe7, 0xb2, 0x31, 0xbf, 0xa6, 0x6a, 0x47, 0x07, 0x9f, 0x1c, 0xd0, 0x3a, 0xc2, 0x02, 0x33,
+	0x09, 0x1f, 0x83, 0x95, 0x51, 0xc6, 0xe3, 0x59, 0x77, 0xcd, 0x36, 0xf6, 0x34, 0x5c, 0xdb, 0xfb,
+	0x00, 0x74, 0xed, 0xbe, 0x18, 0xd1, 0x9c, 0x2e, 0xde, 0x31, 0x98, 0x91, 0x3c, 0x05, 0x90, 0xe1,
+	0x71, 0x74, 0x7b, 0x0f, 0xed, 0x0a, 0xae, 0x32, 0x3c, 0x3e, 0x9e, 0xdd, 0x42, 0x38, 0x00, 0xbd,
+	0x38, 0x23, 0x38, 0x8f, 0xaa, 0xc2, 0x08, 0xcd, 0xf6, 0x75, 0x34, 0xf8, 0xb6, 0x50, 0x9a, 0xbd,
+	0x97, 0x17, 0x57, 0xae, 0x73, 0x79, 0xe5, 0x3a, 0x3f, 0xaf, 0x5c, 0xe7, 0xe3, 0xb5, 0xdb, 0xb8,
+	0xbc, 0x76, 0x1b, 0xdf, 0xaf, 0xdd, 0xc6, 0xbb, 0xc1, 0x1f, 0x0f, 0x03, 0x67, 0xc1, 0xf8, 0xe6,
+	0x21, 0x29, 0x27, 0x05, 0x91, 0xa3, 0x96, 0xa6, 0x9f, 0xff, 0x0e, 0x00, 0x00, 0xff, 0xff, 0x4f,
+	0x4a, 0xd0, 0x92, 0x6f, 0x04, 0x00, 0x00,
 }
 
 func (m *Task) Marshal() (dAtA []byte, err error) {
@@ -456,6 +466,11 @@ func (m *Params) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 	_ = i
 	var l int
 	_ = l
+	if m.CleanUpTime != 0 {
+		i = encodeVarintCrontask(dAtA, i, uint64(m.CleanUpTime))
+		i--
+		dAtA[i] = 0x20
+	}
 	if m.MaxScheduledTime != 0 {
 		i = encodeVarintCrontask(dAtA, i, uint64(m.MaxScheduledTime))
 		i--
@@ -557,6 +572,9 @@ func (m *Params) Size() (n int) {
 	}
 	if m.MaxScheduledTime != 0 {
 		n += 1 + sovCrontask(uint64(m.MaxScheduledTime))
+	}
+	if m.CleanUpTime != 0 {
+		n += 1 + sovCrontask(uint64(m.CleanUpTime))
 	}
 	return n
 }
@@ -1062,6 +1080,25 @@ func (m *Params) Unmarshal(dAtA []byte) error {
 				b := dAtA[iNdEx]
 				iNdEx++
 				m.MaxScheduledTime |= int64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+		case 4:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field CleanUpTime", wireType)
+			}
+			m.CleanUpTime = 0
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowCrontask
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				m.CleanUpTime |= int64(b&0x7F) << shift
 				if b < 0x80 {
 					break
 				}
